--- a/templates/index6.html
+++ b/templates/index6.html
@@ -89,7 +89,7 @@ form textarea{
 <form method="POST" class="container">
     <div class="header">
         <div class="logo"></div>
-        <div><h1>Eeuclidean Distance Calculator</h1></div>
+        <div><h1>Euclidean Distance Calculator</h1></div>
     </div>
 
 
@@ -136,7 +136,7 @@ form textarea{
 
 
 <div>
-    <div> <font size="4.4">Eeuclidean Distance </font>    </div>
+    <div> <font size="4.4">Euclidean Distance </font>    </div>
     <textarea name="output-text" rows = "10" cols = "100"  font-size=18px  width="500px" id="output" disabled="disabled"></textarea>
     
 </div>
